Fix fixed position screens not showing on Safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,3 +19,7 @@
 .toolbar-spacer {
   flex: 1 1 auto;
 }
+
+.mat-drawer-content {
+  min-height: -webkit-fill-available;
+}
